# Str2Hex

./: .gitignore  CMakeLists.txt  Makefile  README.md  converter.c  converter.h  main.c
